# Risk_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: AAPL-bloomberg.csv  AMZN-bloomberg.csv
notebooks/: 01_data_loader.ipynb  02_calibration.ipynb  03_var_es.ipynb  04_backtest.ipynb  05_black_scholes.ipynb
src/risk_project/: backtest.py  black_scholes.py  calibration.py  config.py  data_loader.py  monte_carlo.py  var_es.py
tests/: conftest.py  test_backtest.py  test_black_scholes.py  test_monte_carlo.py  test_var_es.py
