[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk_project"
version = "0.1.0"
description = "Portfolio VaR/ES and Black-Scholes toolkit"
authors = [
  { name="Your Name", email="you@domain.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]
